# guided_transfer_learning_library

./: .gitignore  README.md  buildspec.yml  example.py  example_usage.ipynb  how_to_use_gtl_library.ipynb  pyproject.toml  requirements.txt
src/guided_transfer_learning/: AdjustGuidanceMatrix.py  Scouts.py  __init__.py  file_utils.py  gtl.py
tests/: requirements.txt  test_AdjustGuidanceMatrix.py  test_Scouts.py  test_e2e.py  test_file_utils.py  test_gtl.py
